--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Mahmoud-Allaa/upward-test.git",
+  "homepage": "https://Mahmoud-Allaa.github.io/upward-test/",
   "name": "upward",
   "version": "0.1.0",
   "private": true,
