--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/close-button": "^2.0.2",
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^4.0.0",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
